--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <h2 class="metier" style="color: blanchedalmond;">Developpeur Web </h2>
         </div>
         <div class="coordonné"> 
-            <p><img class="localisation" src="./localisation.svg" alt="localisation"> Tsiadana Antananarivo, Malagasy</p>
+            <div class="dweling">
+                <img class="localisation" src="./localisation.svg" alt="localisation">
+                <p> Tsiadana Antananarivo, Malagasy</p>
+            </div>
             <div class="phone"> 
                 <img src="./call phone.svg" alt="tel">
                 <a href="tel:+206 32 96 570 31"> +206 32 96 570 31 </a>
@@ -23,6 +26,7 @@
                 <img  src="./email.svg" alt="email">  
                 <a href="mailto:misantratanjoniaina@gmail.com"> misantatratanjoniaina@gmail.com</a>
             </div>
+        </div>
 </section>
     <!-- corp de mon cv -->
 <section class="section2">
@@ -48,10 +52,10 @@
         </ul>
 <hr>
         <h3>FORMATION</h3>
-        <ol>
+        <ul>
             <li>Informatique bureautique en 2024</li>
             <li>L1 en Mathématique et Informatique 2024-2025</li>
-        </ol>
+        </ul>
 <hr>
         <h3>DIPLÔME OBTENUE</h3>
         <ul>
