--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <div class="coordonné"> 
             <div class="dweling">
                 <img class="localisation" src="./localisation.svg" alt="localisation">
-                <p> Tsiadana Antananarivo, Malagasy</p>
+                <p class="adresse"> Tsiadana Antananarivo, Malagasy</p>
             </div>
             <div class="phone"> 
-                <img src="./call phone.svg" alt="tel">
+                <img src="./call phone.svg" width="30px" height="30" alt="tel">
                 <a href="tel:+206 32 96 570 31"> +206 32 96 570 31 </a>
             </div>
             <div class="email" >
-                <img  src="./email.svg" alt="email">  
+                <img  src="./email.svg" width="30px" height="30px" alt="email">  
                 <a href="mailto:misantratanjoniaina@gmail.com"> misantatratanjoniaina@gmail.com</a>
             </div>
         </div>
@@ -34,44 +34,42 @@
     <div class="part1"> 
         <h2>A PROPOS DE MOI</h2>
         <h3>EXPERIENCE VEÇUE</h3>
-        <p>Prise de parole en public</p>
-            <ul>
-                <li>"J'ai une expérience solide en communication orale grâce à des présentations régulières devant des groupe variés".</li>
-                <li>" J'ai la capacité à structuré et animé interventions publiques de manière claire et engageante</li>
-            </ul>
-        <p>Réalisation d'exposés en classe</p>
-            <ul>
-                <li>" Compétence en préparation et présentation de contenus, avec une attention particulière à la clarté et à l'adaptation au public cible."</li>
-                <li>" Habilité à vulgariser des sujets complexes pour différents auitoires."</li>
-            </ul>
-        <p>Rôle de délégué de classe</p>
-        <ul>
-            <li>" Expérience en leadership et représentation d'un groupe auprès d'interlocuteurs divers (professeurs, administration)".</li>
-            <li>"Compétence en médiation et en gestion de conflits, avec une capacité à défendre les intérêts collectifs tout en favorisant un dialogue constructif."</li>
-            <li>"Organisation et coordination de projets collectifs (réunions, évènement, initiatives)."</li>
-        </ul>
+        <h4>Prise de parole en public</h4>
+            <p>
+                "J'ai une expérience solide en communication orale grâce à des présentations régulières devant des groupe variés".
+                " J'ai la capacité à structuré et animé interventions publiques de manière claire et engageante
+            </p>
+        <h4>Réalisation d'exposés en classe</h4>
+            <p>
+                " Compétence en préparation et présentation de contenus, avec une attention particulière à la clarté et à l'adaptation au public cible."
+                " Habilité à vulgariser des sujets complexes pour différents auitoires."
+            </p>
+        <h4>Rôle de délégué de classe</h4>
+        <p>
+            " Expérience en leadership et représentation d'un groupe auprès d'interlocuteurs divers (professeurs, administration)".
+            "Compétence en médiation et en gestion de conflits, avec une capacité à défendre les intérêts collectifs tout en favorisant un dialogue constructif."
+            "Organisation et coordination de projets collectifs (réunions, évènement, initiatives)."
+        </p>
 <hr>
         <h3>FORMATION</h3>
-        <ul>
-            <li>Informatique bureautique en 2024</li>
-            <li>L1 en Mathématique et Informatique 2024-2025</li>
-        </ul>
+        <p>
+            Informatique bureautique en 2024
+            L1 en Mathématique et Informatique 2024-2025
+        </p>
 <hr>
         <h3>DIPLÔME OBTENUE</h3>
-        <ul>
-            <li>CEPE en 2015</li>
-            <li>BEPC en 2020</li>
-            <li>BACC série S en 2023</li>
-            <li>BACC série C en 2024</li>
-        </ul>
+        <p>
+            CEPE en 2015
+            BEPC en 2020
+            BACC série S en 2023
+            BACC série C en 2024
+        </p>
 <hr>
         <h3>LANGUES</h3>
-        <ol>
-            <ul>
-                <li>Français : courante</li>
-                <li>Anglais : intermédiaire</li>
-            </ul>
-        </ol>    
+        <p>
+            Français : courante
+            Anglais : intermédiaire
+        </p>    
     </div>
 <!-- deuxième partie du deuxième section -->
     <div class="part2">
@@ -84,6 +82,8 @@
                 <li>Connaissances en maintenance informatique et résolution de problèmes techniques.</li>
                 <li>Avoir de la connaissance en photoshop et l'instalation des logiciels grâce à la stage d'étude professionnelle que je fait pendant deux mois</li>
                 <li>Compétence informatique sur les code HTML, CSS</li>
+                <li>Compétence en C++</li>
+                <li>Compétence en github et en Netlify</li> 
 
             </ul>
         </ol>
